js/js.translator/testData/incremental/invalidation/moveFilesBetweenModules/lib1/l11.kt
inline fun foo(a: Int) = a * 2
